# buildwithai-workshop-autosetup-tool

./: .gitignore  README.md  README_JP.md  README_KO.md  README_ZHTW.md  pyproject.toml
bwai_workshop_tools/: cli.py  runner.py  ui.py
bwai_workshop_tools/i18n/: en.py  ja.py  ko.py  loader.py  zh_tw.py
bwai_workshop_tools/steps/: base.py  gcloud.py
examples/: adk-gemini-agent.json
gde_workshop_tools/: cli.py
gde_workshop_tools/i18n/: en.py  ja.py  ko.py  loader.py  zh_tw.py
gde_workshop_tools/steps/: gcloud.py  python_env.py  registry.py  shell.py
